--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -209,7 +209,24 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-websocket</artifactId>
 			<version>${org.springframework-version}</version>
-		</dependency>     
+		</dependency>    
+		
+		<!-- 메일 인증을 위한 라이브러리 mail, spring-context-support -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
+		
+		
+		
+		 
 	</dependencies>
     <build>
         <plugins>
