--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -218,6 +218,19 @@
 		    <version>1.13.1</version>
 		</dependency>
 		
+		<!-- 엑셀파일 읽기쓰기 -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>4.1.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>4.1.2</version>
+		</dependency>
+		
+		
 		   
 	</dependencies>
     <build>
