--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -217,6 +217,14 @@
 			<artifactId>spring-websocket</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>     
+		
+		<dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+		
 	</dependencies>
     <build>
         <plugins>
