--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -209,7 +209,22 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-websocket</artifactId>
 			<version>${org.springframework-version}</version>
-		</dependency>     
+		</dependency>   
+		
+		<!-- Quartz 스케쥴러 라이브러리 -->
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.3.2</version>
+		</dependency>
+
+		<!-- 스프링 Quartz 도우미 라이브러리 -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>4.3.4.RELEASE</version>
+		</dependency>
+				  
 	</dependencies>
     <build>
         <plugins>
