--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -212,11 +212,12 @@
 </dependency>
 		
 		<!-- 썸네일 생성 기능 -->
-	<dependency>
-		<groupId>org.imgscalr</groupId>
-		<artifactId>imgscalr-lib</artifactId>
-		<version>4.2</version>
-	</dependency>
+<dependency>
+    <groupId>net.coobird</groupId>
+    <artifactId>thumbnailator</artifactId>
+    <version>0.4.13</version>
+</dependency>
+
 
 
 		
