지역별 지도 생성. 값 연결 전 -jin-

--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -224,6 +224,13 @@
 		    <artifactId>spring-context-support</artifactId>
 		    <version>4.3.4.RELEASE</version>
 		</dependency>
+		
+		<!-- json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20210307</version>
+		</dependency>				
 				  
 	</dependencies>
     <build>
