--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -198,6 +198,7 @@
 		    <version>1.0.2</version>
 		</dependency>
 		
+		<!-- jackson -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
