--- a/2weeks/src/main/webapp/WEB-INF/web.xml
+++ b/2weeks/src/main/webapp/WEB-INF/web.xml
@@ -63,6 +63,16 @@
 	</error-page> -->
 
 
+<filter>
+	<filter-name>hiddenHttpMethodFilter</filter-name>
+	<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter
+	</filter-class>
+</filter>
+	<filter-mapping>
+		<filter-name>hiddenHttpMethodFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 
 
 
