--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -304,7 +304,17 @@
 		    <groupId>org.json</groupId>
 		    <artifactId>json</artifactId>
 		    <version>20210307</version>
-		</dependency>								  
+		</dependency>
+		
+		<!-- websocket-api  -->
+		<dependency>
+		    <groupId>javax.websocket</groupId>
+		    <artifactId>javax.websocket-api</artifactId>
+		    <version>1.1</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+										  
 
 	</dependencies>
     <build>
