지식인 구현중

--- a/2weeks/src/main/webapp/WEB-INF/web.xml
+++ b/2weeks/src/main/webapp/WEB-INF/web.xml
@@ -47,9 +47,9 @@
 
 
 	<!-- 에러페이지 등록 -->
-	<error-page>
+<!-- 	<error-page>
 		<exception-type>java.lang.Exception</exception-type>
 		<location>/WEB-INF/views/common/error.jsp</location>
-	</error-page>
+	</error-page> -->
 
 </web-app>
