--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -334,7 +334,11 @@
 		    <scope>provided</scope>
 		</dependency>
 		
-		
+		<dependency>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-resources-plugin</artifactId>
+		    <version>3.2.0</version>
+		</dependency>
 		
 								  
 	</dependencies>
