--- a/2weeks/pom.xml
+++ b/2weeks/pom.xml
@@ -20,7 +20,13 @@
 			<id>spring-libs-snapshot</id>
 			<name>Spring Snapshot Repository</name>
 			<url>https://repo.spring.io/libs-snapshot</url>
-		</repository>		
+		</repository>
+		
+		<!-- 형태소 분석기 구축용 -->
+		<repository>
+	      <id>jitpack.io</id>
+	      <url>https://jitpack.io</url>
+	  </repository>	
 	</repositories>
 	<dependencies>
 		<!-- Spring -->
@@ -334,7 +340,12 @@
 		    <scope>provided</scope>
 		</dependency>
 		
-		
+		<!-- 형태소 분석기 -->
+		<dependency>
+		    <groupId>com.github.shin285</groupId>
+		    <artifactId>KOMORAN</artifactId>
+			<version>3.3.4</version>
+		</dependency>
 		
 								  
 	</dependencies>
